# eco_system_demo_bevy

./: .gitignore  LICENSE  README.en.md  README.md  game_design.md  plan.md  system_design.md
minigame/: Cargo.toml
minigame/assets/shaders/: hexagon_border.wgsl
minigame/macros/: Cargo.toml
minigame/macros/src/: lib.rs
minigame/src/: app_setup.rs  lib.rs  main.rs
minigame/src/ai/: behave_tree.rs  board_state.rs  mod.rs
minigame/src/core/: components.rs  entities.rs  hex_grid.rs  mod.rs  state.rs
minigame/src/core/systems/: camera.rs  debug.rs  grid.rs  hex_grid.rs  interaction.rs  mod.rs  movement.rs  scene.rs  state_machine.rs
minigame/src/level/: config.rs  loader.rs  mod.rs  systems.rs
minigame/src/scenes/: game_loading.rs  main_menu.rs  mod.rs  scene.rs  scene_selector.rs
minigame/src/sprite/: config.rs  mod.rs  sprite_mgr.rs
minigame/src/ui/: animal_state_ui.rs  cards.rs  error_tips.rs  hud.rs  mod.rs  progress_bar.rs  progress_bar_material.rs
