[package]
name = "minigame"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_behave = "0.3.0"
bevy_egui = "0.35.1"
bevy_screen_diagnostics = "0.8.1"
rand = "0.9.2"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] } 
serde_json = "1.0.140"
thiserror = "2.0.12"
